--- a/src/assets/styles/components/_card.scss
+++ b/src/assets/styles/components/_card.scss
@@ -149,7 +149,7 @@
 
     &--footer {
       border-top: 1px solid var(--grey-200);
-      background-color: #fff;
+      background-color: var(--grey-0);
     }
 
     .card__divider {
@@ -159,6 +159,12 @@
 }
 [data-theme="dark"] {
   .card {
+    background-color: var(--grey-20);
     border-color: var(--grey-30);
+    color: var(--grey-100);
+
+    &__content--footer {
+      background: none;
+    }
   }
 }
