--- a/src/assets/styles/components/_divider.scss
+++ b/src/assets/styles/components/_divider.scss
@@ -43,12 +43,7 @@
 
 [data-theme="dark"] {
     .divider {
-        &--primary {
-            background-color: var(--grey-30);
-
-            &.divider--grey {
-                background-color: var(--grey-40);
-            }
-        }
+        --ds-divider-bg-color: var(--grey-40);
+        --ds-divider-bg-color-grey: var(--grey-50);
     }
 }
