--- a/src/assets/styles/helpers/_classname.scss
+++ b/src/assets/styles/helpers/_classname.scss
@@ -386,7 +386,7 @@ $gaps: 4, 8, 12, 16;
     $color-type: (
       primary: var(--grey-100),
       secondary: var(--grey-50),
-      tertiary: var(--grey-40),
+      tertiary: var(--grey-50),
       disabled: var(--grey-30),
       selected: var(--brand-500),
       inverse: var(--grey-500),
